<resources>
    <string name="FRBS_CERTIFICATES_BUTTON">certificatesButton</string>
    <string name="FRBS_CERTIFICATES_BUTTON_NAME">Certificates button onClick</string>
    <string name="FRBS_CONTENT_TYPE_BUTTON">Button</string>
    <string name="FRBS_CONTENT_TYPE_EXTERNAL_STORAGE_PERMISSION_ALLOWED">Read/Write external storage request permission message</string>
    <string name="FRBS_CONTENT_TYPE_EXTERNAL_STORAGE_PERMISSION_DENIED">Read/write external storage permission denied message</string>
    <string name="FRBS_CONTENT_TYPE_FILE">File</string>
    <string name="FRBS_CONTENT_TYPE_FLOATING_BUTTON">Floating button</string>
    <string name="FRBS_DIGITAL_SIGNATURE_BUTTON">digitalSignatureButton</string>
    <string name="FRBS_DIGITAL_SIGNATURE_BUTTON_NAME">Digital Signature button onClick</string>
    <string name="FRBS_EXTERNAL_STORAGE_PERMISSION">onRequestPermissionsResult</string>
    <string name="FRBS_EXTERNAL_STORAGE_PERMISSION_ALLOWED_NAME">Read/Write external storage request permission</string>
    <string name="FRBS_EXTERNAL_STORAGE_PERMISSION_DENIED">onRequestPermissionsResult</string>
    <string name="FRBS_EXTERNAL_STORAGE_PERMISSION_DENIED_NAME">Read/Write external storage permission denied</string>
    <string name="FRBS_FILE_BROWSER_BUTTON">fab</string>
    <string name="FRBS_FILE_BROWSER_BUTTON_NAME">requestReadExeternalStoragePermission</string>
    <string name="FRBS_FILE_TO_DELETE">File to delete</string>
    <string name="FRBS_FILE_TO_SEND">File to send</string>
    <string name="FRBS_FILE_TO_SIGN">File to sign</string>
    <string name="FRBS_GENERIC_FILE">Generic file signed</string>
    <string name="FRBS_NEW_SIGNATURE">New signature</string>
    <string name="FRBS_NEW_VERIFICATION">New signature verification</string>
    <string name="FRBS_NEW_VERIFICATION_NAME">A new signature verification started</string>
    <string name="FRBS_PDF_DOCUMENT">Pdf document signed</string>
    <string name="FRBS_PIN_CHANGED">PIN changed</string>
    <string name="FRBS_PIN_CHANGED_NAME">Change PIN operation completed</string>
    <string name="FRBS_PIN_MANAGER_BUTTON">pinManagerButton</string>
    <string name="FRBS_PIN_MANAGER_BUTTON_NAME">Pin Manager button onClick</string>
    <string name="FRBS_PIN_UNLOCKED_NAME">Unlock PIN operation completed</string>
    <string name="FRBS_PIN_UNLOKED">PIN unlocked</string>
    <string name="FRBS_RECEIVE_FILE">handleSendFile</string>
    <string name="FRBS_RECEIVE_FILE_NAME">Received file from other app</string>
    <string name="FRBS_RECEIVE_PDF">handleSendPdf</string>
    <string name="FRBS_RECEIVE_PDF_NAME">Received pdf file from other app</string>
    <string name="FRBS_SETTINGS_BUTTON">settingsButton</string>
    <string name="FRBS_SETTINGS_BUTTON_NAME">Settings button onClick</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_delete">Delete</string>
    <string name="action_open">Open</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_verify">Verify</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">Firmo con CIE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applying_filter">Applying filter</string>
    <string name="attempts_remaining">Attempts remaining:</string>
    <string name="ble_in_next_release">This app works only with the BLE reader \"IDBridge CT1100 Badge Holder BLE\".\10It will be supported in the next release.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_share">Share</string>
    <string name="button_sign">Sign</string>
    <string name="button_stamp">Timbro</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_access_to_external_storage">Error: cannot access to extenal storage.</string>
    <string name="cannot_open_session">Unable to open session. Try to reconnect the reader.</string>
    <string name="cantCrop">Cant crop the image, change the points</string>
    <string name="certificate">Certificate</string>
    <string name="certificate_expired">The certificate is expired</string>
    <string name="certificate_ok">The certificate is valid</string>
    <string name="certificates">Certificates Manager</string>
    <string name="certificates_error">Certificates Error</string>
    <string name="change_pin">Change PIN</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="cie_lost_error">The connection with the CIE was lost</string>
    <string name="cie_readfile_error">Unable to read a file from the CIE</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">4e750d70cea046e689c523779e16193c</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config">Configuration</string>
    <string name="config_error">Unexpected Error</string>
    <string name="confirm_delete_action_title">Delete File</string>
    <string name="copied">copied.</string>
    <string name="copy">Copy</string>
    <string name="copying">Copying</string>
    <string name="copyright">Copyright 2018-2020 by Cyberneid SRL</string>
    <string name="could_not_be_copied">could not be copied.</string>
    <string name="could_not_be_deleted">could not be deleted.</string>
    <string name="could_not_be_moved">could not be moved.</string>
    <string name="default_web_client_id">652013334840-8ipir46qs4ni5c3opj3tit105dqo5io5.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="deleted">deleted.</string>
    <string name="deleting">Deleting</string>
    <string name="digital_signature">Digital Signature</string>
    <string name="digital_signature_long_click_actions_title">Select Action</string>
    <string name="dike_message">Warning: Some software distributed on the Italian market do not correctly verify the signature made by Firmo con CIE, as they do not correctly implement the article 61 of the DPCM 22/02/2013 and the European directives eIDAS. Therefore, for the verification of the signature we suggest to use Firma Certa by Namirial, which can be downloaded from here: https://www.firmacerta.it or the online verifier of Italian post offices: https://postecert.poste.it/verifier</string>
    <string name="document_signature_succeded">Document signature succeded.</string>
    <string name="done">Save</string>
    <string name="dont_show_anymore">Don\'t show anymore</string>
    <string name="ext_key_usage">Extended key usage:</string>
    <string name="fingerprint_not_avail">The Fingerprint sensor is not available on this device</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="issued_by">Issued by:</string>
    <string name="issued_to">Issued to:</string>
    <string name="key_usage">Key usage:</string>
    <string name="nfc">NFC</string>
    <string name="pin_manager">PIN Manager</string>
    <string name="rightsReserved">All rights reserved</string>
    <string name="settings">Settings</string>
    <string name="unlock_pin">Unlock PIN</string>
    <string name="usb">USB</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="valid_from">Valid from:</string>
    <string name="valid_to">to:</string>
</resources>