<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:textSize="@dimen/font_size" android:textColor="@color/fontColor" android:gravity="center" android:id="@+id/digitalSignatureButton" android:background="@color/digitalSignatureBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/digital_signature" android:layout_weight="0.25" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@color/fontColor" android:gravity="center" android:id="@+id/certificatesButton" android:background="@color/certificateBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/certificates" android:layout_weight="0.25" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@color/fontColor" android:gravity="center" android:id="@+id/pinManagerButton" android:background="@color/pinManagerBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/pin_manager" android:layout_weight="0.25" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@color/fontColor" android:gravity="center" android:id="@+id/settingsButton" android:background="@color/settingsBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/settings" android:layout_weight="0.25" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
