<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@color/pinManagerBackgroundColor" android:layout_width="match_parent" android:layout_height="80dp" android:weightSum="1">
        <TextView android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/pinManagerTextView" android:background="@color/pinManagerBackgroundColor" android:padding="@dimen/padding_main_activity" android:paddingRight="10dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/pin_manager" android:layout_weight="0.6" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/colorAccent" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/font_size" android:textColor="@color/fontPinManager" android:gravity="center" android:id="@+id/unlockPin" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="150dp" android:layout_marginTop="2dp" android:text="@string/unlock_pin" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@color/fontPinManager" android:gravity="center" android:id="@+id/changePin" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="150dp" android:layout_marginTop="2dp" android:layout_marginBottom="2dp" android:text="@string/change_pin" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
</LinearLayout>
