<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="11">
        <TextView android:textSize="@dimen/font_size" android:textColor="#4976ad" android:gravity="center" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="0dp" android:text="Select the Smart Card Reader" android:layout_weight="2" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/bluetoothButton" android:background="@color/digitalSignatureBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/bluetooth" android:layout_weight="3" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/usbButton" android:background="@color/certificateBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/usb" android:layout_weight="3" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
        <Button android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/nfcButton" android:background="@color/pinManagerBackgroundColor" android:padding="@dimen/padding_main_activity" android:layout_width="match_parent" android:layout_height="0dp" android:text="@string/nfc" android:layout_weight="3" android:textAllCaps="false" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
