<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/headerLayout" android:background="@color/certificateBackgroundColor" android:layout_width="match_parent" android:layout_height="80dp" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/certificatesTextView" android:background="@color/digitalSignatureBackgroundColor" android:padding="@dimen/padding_main_activity" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/certificate" android:layout_weight="1" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/certificateDetails" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="16dp" android:layout_above="@+id/adView" android:layout_below="@+id/headerLayout">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textStyle="bold" android:textColor="@color/fontGray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/issued_to" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textColor="@color/fontGray" android:id="@+id/issuedTo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/proximanova_light"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textStyle="bold" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/issued_by" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textColor="@color/fontGray" android:gravity="bottom" android:id="@+id/issuedBy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/proximanova_light"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textStyle="bold" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/valid_from" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_gravity="bottom" android:id="@+id/validFrom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:maxLines="1" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textStyle="bold" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/valid_to" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_certificate_details" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_gravity="bottom" android:id="@+id/validTo" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="10dp" android:maxLines="1" android:fontFamily="@font/proximanova_light"/>
        </LinearLayout>
        <TextView android:textSize="@dimen/font_size_certificate_details" android:textStyle="bold" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/key_usage" android:fontFamily="@font/proximanova_light"/>
        <TextView android:textSize="@dimen/font_size_certificate_details" android:textColor="@color/fontGray" android:gravity="top" android:id="@+id/keyUsage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:fontFamily="@font/proximanova_light"/>
        <TextView android:textSize="@dimen/font_size_certificate_details" android:textStyle="bold" android:textColor="@color/fontGray" android:gravity="bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ext_key_usage" android:fontFamily="@font/proximanova_light"/>
        <TextView android:textSize="@dimen/font_size_certificate_details" android:textColor="@color/fontGray" android:gravity="top" android:id="@+id/extKeyUsage" android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView android:id="@+id/adView" android:background="@color/white" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentBottom="true" app:adSize="BANNER" app:adUnitId="ca-app-pub-5320504994228344/1925328757"/>
</RelativeLayout>
