<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/headerLayout" android:background="@color/settingsBackgroundColor" android:layout_width="match_parent" android:layout_height="80dp" android:weightSum="1" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/settingsTextView" android:background="@color/settingsBackgroundColor" android:padding="@dimen/padding_main_activity" android:paddingRight="10dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/settings" android:layout_weight="0.6" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_above="@+id/adView" android:layout_below="@+id/headerLayout">
        <RelativeLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="100dp">
            <TextView android:textSize="@dimen/font_size" android:textColor="@android:color/black" android:id="@+id/fingerprintText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_fingerprint" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
            <CheckBox android:id="@+id/chipFingerprint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@android:color/holo_orange_dark" android:id="@+id/chipFingerprintNotAvail" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fingerprint_not_avail" android:maxLines="3" android:layout_below="@+id/fingerprintText" android:layout_alignParentLeft="true"/>
        </RelativeLayout>
        <TextView android:textSize="@dimen/font_size_info_other" android:textStyle="bold" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Opzioni di firma elettronica"/>
        <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@android:color/black" android:id="@+id/textViewTimestamp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Marche temporali" android:fontFamily="@font/proximanova_light"/>
        <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@android:color/black" android:id="@+id/textViewLTV" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Modalità Long Term Validation" android:fontFamily="@font/proximanova_light"/>
        <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@android:color/black" android:id="@+id/helpTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/help" android:fontFamily="@font/proximanova_light"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView android:id="@+id/adView" android:background="@color/white" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentBottom="true" app:adSize="BANNER" app:adUnitId="ca-app-pub-5320504994228344/1925328757"/>
</RelativeLayout>
