<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="5.85">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@color/digitalSignatureBackgroundColor" android:layout_width="match_parent" android:layout_height="0dp" android:weightSum="1" android:layout_weight="0.85">
            <TextView android:textSize="@dimen/font_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/infoTitle" android:background="@color/digitalSignatureBackgroundColor" android:padding="@dimen/padding_main_activity" android:paddingRight="10dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/info" android:layout_weight="0.6" android:fontFamily="@font/proximanova_light"/>
        </LinearLayout>
        <LinearLayout android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
        <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="0dp" android:weightSum="10" android:layout_weight="3">
            <TextView android:textSize="@dimen/font_size_info_app_name" android:textStyle="bold" android:textColor="@color/fontPinManager" android:gravity="center" android:layout_gravity="center" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@color/pinManagerBackgroundColor" android:gravity="center" android:layout_gravity="center" android:id="@+id/version" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="@font/proximanova_light"/>
            <ImageView android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="20dp" android:src="@drawable/disigon_cie_new_rounded_logo" android:scaleType="fitCenter" android:layout_weight="6"/>
            <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@color/fontPinManager" android:gravity="center" android:layout_gravity="center" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/copyright" android:fontFamily="@font/proximanova_light"/>
            <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@color/fontPinManager" android:gravity="center" android:layout_gravity="center" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rightsReserved" android:fontFamily="@font/proximanova_light"/>
            <ImageView android:layout_gravity="center" android:layout_width="250dp" android:layout_height="100dp" android:src="@drawable/logo_full_2" android:scaleType="fitCenter"/>
            <TextView android:textSize="@dimen/font_size_info_other" android:textColor="@color/fontPinManager" android:gravity="center" android:layout_gravity="center" android:id="@+id/cyberneidTextView" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="cyberneid.com" android:fontFamily="@font/proximanova_light"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
